# webvideo

./: .gitignore  CLAUDE.md  DESIGN.md  PRODUCT.md
.impeccable/: design.json
.impeccable/live/: config.json
docs/: audio-parallel-design.md  frontend-slides-integration-plan.md
web-video-studio/: .gitignore  AGENTS.md  CLAUDE.md  build_macos.sh  middleware.ts  next.config.ts  package-lock.json  package.json  setup.sh  start_dev.sh  test-final.mjs  tsconfig.electron.json  tsconfig.json
web-video-studio/.telemetry/: build-events-2026-06-22.jsonl  build-events-2026-06-23.jsonl
web-video-studio/app/: globals.css  layout.tsx  page.tsx
web-video-studio/assets/: icon.icns
web-video-studio/components/: article-export-panel.tsx  article-layout-editor.tsx  article-uploader.tsx  assets-library.tsx  audio-checkpoint-card.tsx  audio-player-bar.tsx  audio-workbench.tsx  avatar-workbench.tsx  bgm-workbench.tsx  bone-character.tsx  build-progress-card.tsx  chapter-progress-panel.tsx  chapter-review-card.tsx  chat-panel 2.tsx  chat-panel.tsx  chat-tool-calls.tsx  code-file-tree.tsx  content-checkpoint-card.tsx  edit-mode-panel.tsx  env-check-banner.tsx  file-panel.tsx  file-viewer-sheet.tsx  graphic-plan-checkpoint-card.tsx  illust-edit-modal.tsx  (+34 more)
web-video-studio/src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
web-video-studio/src-tauri/capabilities/: default.json
web-video-studio/src-tauri/icons/: icon.icns
web-video-studio/src-tauri/infoplist/en.lproj/: InfoPlist.strings
web-video-studio/src-tauri/src/: lib.rs  main.rs  server.rs
(+968 files in other folders)
