[package]
name = "webvideo-studio"
version = "0.1.0"
description = "WebVideo Studio — AI-powered video production desktop app"
authors = ["WebVideo Studio"]
license = "MIT"
repository = "https://github.com/webvideo-studio/webvideo"
edition = "2021"
rust-version = "1.81"

[[bin]]
name = "webvideo-studio"
path = "src/main.rs"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = ["tray-icon", "devtools", "image-png", "protocol-asset", "macos-private-api"] }
open = "5"
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-localhost = "2"
reqwest = { version = "0.12", features = ["json", "blocking"] }
ureq = "3"
which = "8"
dirs = "6"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString"] }
objc2-app-kit = { version = "0.3", default-features = false, features = ["NSWindow", "NSView"] }
